# django-app

./: .env.template  Dockerfile  README.md  devices.csv  docker-compose.yaml  orders.csv  pyproject.toml  queries.sql  requirements.txt
mysite/: log.txt  shopapp-products-fixtures.json  shopapp-products-fixtures.xml  shopapp.fixtures.json
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/management/commands/: populate.py
mysite/blogapp/migrations/: 0001_initial.py  0002_rename_tag_article_tags.py  0003_alter_article_pub_date_alter_article_title.py
mysite/blogapp/templates/blogapp/: article_detail.html  article_list.html  base.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myapiapp/: serializers.py  urls.py  views.py
mysite/myauth/: forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  sitemaps.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: auth-fixture.json  orders-fixture.json  products-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_order_reciept.py  0003_product_preview.py  0004_productimage.py  0005_alter_productimage_image.py  0006_alter_productimage_image.py  0007_alter_order_options_alter_product_options_and_more.py  0008_alter_order_reciept.py
(+31 files in other folders)
