[tool.poetry]
name = "m-20-prod"
version = "0.1.0"
description = ""
authors = ["ID <indust92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "4.2.0"
django-rest-framework = "^0.1.0"
djangorestframework = "^3.14.0"
django-filter = "^23.3"
django-debug-toolbar = "^4.2.0"
pillow = "^10.0.1"
gunicorn = "^21.2.0"
sentry-sdk = "^1.31.0"
drf-spectacular = "^0.26.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
